--- a/public/front_assets/css/style.css
+++ b/public/front_assets/css/style.css
@@ -2030,7 +2030,7 @@ img {
 }
 #aa-product-category .aa-product-catg-content .aa-product-catg-body .aa-product-catg li {
   margin: 0 0 20px 30px;
-  width: 29.916%;
+  width: 29%;
 }
 #aa-product-category .aa-product-catg-content .aa-product-catg-body .aa-product-catg li .aa-product-descrip {
   display: none;
@@ -4184,20 +4184,43 @@ img {
 }
 
 .lead_time{
-  color: red;
+    color: red;
     margin-top: -12px;
     font-size: 13px;
     font-weight: bold;
 }
 
-.aa-color-red{
-  background-color:red;
+.aa-color-red
+{
+  background-color:rgb(209, 22, 22);
 }
 .aa-color-blue
 {
   background-color: blue;
 }
+.aa-color-cream
+{
+  background-color: #FFFDD0;
+}
+.aa-color-purple
+{
+  background-color: purple;
+
+}
+.aa-color-white
+{
+  background-color: white;
+    
+}
 .mt10
 {
   margin-top: 10px;
+}
+.active_color
+{
+  border: 2px solid green;
+}
+.left_cat_active
+{
+  color:red;
 }
