--- a/public/front_assets/css/style.css
+++ b/public/front_assets/css/style.css
@@ -2604,6 +2604,7 @@ img {
 /*---- Login form ----*/
 
 .aa-login-form input[type="text"],
+.aa-login-form input[type="email"],
 .aa-login-form input[type="password"] {
   border: 1px solid #ccc;
   font-size: 16px;
@@ -4223,4 +4224,8 @@ img {
 .left_cat_active
 {
   color:red;
+}
+.field_error{
+  color:red;
+  margin-top:-17px
 }
